# SAGE

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: docker-publish.yml
src/sage/: config.py  document_parser.py  essay_grader.py  essay_splitter.py  llm_client.py  main.py  report_exporter.py  task_manager.py
src/sage/api/: routes.py
static/: app.js  index.html  style.css
